--- a/var/langs/en/addons/ex.po
+++ b/var/langs/en/addons/ex.po
@@ -8,6 +8,6 @@ msgctxt "Languages::ex_test"
 msgid "EX test"
 msgstr "EX test"
 
-msgctxt "SettingsOptions::sample_addon::marketplace_license_number"
+msgctxt "SettingsOptions::ex::marketplace_license_number"
 msgid "Marketplace license number"
 msgstr "Marketplace license number"
